# deuterium

./: Cargo.toml  README.md
src/: data.rs  iterators.rs  lib.rs  main.rs  numerics.rs  prelude.rs
src/problems/: mod.rs  p001_050.rs  p051_100.rs  p101_150.rs  p151_200.rs  p201_250.rs  p351_400.rs  p501_550.rs  p551_600.rs
